# Rent-Renewal-Tracker

./: .gitignore  MANIFEST.in  README.md  license.txt  pyproject.toml
docs/: BENCH_DEPLOYMENT.md  COMPREHENSIVE_AUDIT_2026-07-12.md  FRAPPE_APP_DEVELOPMENT_PLAN.md  IChannel Technologies - Rent Tracker Application Proposal for XYZ Limited.docx  RENT_RENEWAL_TRACKER_FRAPPE_PROPOSAL.md  Rent Renewal Tracker - Frappe App Proposal.docx  Rent Renewal Tracker Knowledge Base and User Manual.docx  Rent Renewal Tracker User Guide.docx  Rent Renewal Tracker User Guide.md
rent_renewal_tracker/: api.py  dashboard.py  health.py  hooks.py  install.py  modules.txt  patches.txt  permissions.py  reminder_rules.py  reminders.py  scheduled_tasks.py  weekly_digest.py
rent_renewal_tracker/patches/v0_1/: setup_application_defaults.py
rent_renewal_tracker/patches/v0_10/: __init__.py  add_safe_lease_and_payment_controls.py
rent_renewal_tracker/patches/v0_2/: setup_operational_dashboard.py
rent_renewal_tracker/patches/v0_3/: apply_security_hardening.py
rent_renewal_tracker/patches/v0_4/: setup_lifecycle_and_document_revisions.py
rent_renewal_tracker/patches/v0_5/: setup_dashboard_usability.py
rent_renewal_tracker/patches/v0_6/: __init__.py  initialize_required_settings_and_document_families.py
rent_renewal_tracker/patches/v0_7/: __init__.py  normalize_dashboard_number_card_currency.py
rent_renewal_tracker/tests/: test_dashboard.py  test_install.py  test_permissions.py  test_reminders.py  test_reports.py
tools/: build_knowledge_base.py  test_reminder_rules.py  validate_app.py
(+70 files in other folders)
